<resources>
    <string name="app_name">Busca Tu Curso</string>
    <string name="copyright">© DRAI 2015</string>
    <string name="facultad">Facultad de Ingeniería</string>
    <string name="consulta_nombre">Consultar Materia Por Nombre</string>
    <string name="consulta_codigo">Consultar Materia Por Codigo y Grupo</string>
    <string name="carga_datos">Cargando los Datos</string>
    <string name="codigo_curso">Codigo: </string>
    <string name="nombre_curso">Nombre: </string>
    <string name="aula_curso">Aula:</string>
    <string name="profesor_curso">Profesor: </string>
    <string name="horario_curso">Horario:</string>
    <string name="codigo_curso_hint">Codigo del Curso </string>
    <string name="nombre_curso_hint">Nombre del curso </string>
    <string name="grupo_curso">Grupo: </string>
    <string name="grupo_curso_hint">Numero de Grupo </string>
    <string name="consultar">Consultar </string>
    <string name="error_consulta_Codigo_Grupo">No existe una materia con el codigo y grupo especificado.
    \nPor favor verifique la informacion ingresada.</string>
    <string name="error_ingresar_codigo_grupo">Por favor ingrese toda la información</string>
    <string name="error_ingresar_codigo">Código de la materia incompleto</string>
    <string name="error_consulta_nombre_materia">No existe una materia con el nombre especificado.
    \nPor favor verifique la informacion ingresada.</string>
    <string name="error_ingresar_nombre_materia">Por favor ingrese el nombre de la materia.</string>
    <string name="error_conexion_internet">No se puede conectar a internet
    o la conexion es demasiado lenta</string>


    <string name="action_settings">Settings</string>
</resources>
